# practice-rs

./: Cargo.toml  cargo.toml
async1/: Cargo.toml
async1/src/: main.rs
async2/: Cargo.toml
async2/src/: main.rs
byte/src/: main.rs
command/: Cargo.toml
command/src/: main.rs
filter/: Cargo.toml
filter/examples/: simple_filter.rs
filter/src/: lib.rs  main.rs
lc/: Cargo.toml
lc/data/: target.txt
lc/src/: main.rs
lifesim/: Cargo.toml
lifesim/src/: ai.rs  living.rs  main.rs  person.rs  world.rs
lifesim/src/entities/: ai.rs  living.rs  mod.rs  person.rs
lifesim/src/sim/: world.rs
memmap/: Cargo.toml
memmap/src/: main.rs
multitype/: Cargo.toml
multitype/src/: main.rs
multitype/src/pets/: cat.rs
ownership/: Cargo.toml
ownership/src/: main.rs
repl/: Cargo.toml
repl/src/: lib.rs  main.rs
repl/src/commands/: exit.rs  greet.rs  mod.rs  unknown.rs
simplematch/: Cargo.toml
simplematch/src/: main.rs
split/src/: main.rs
src/pets/: dog.rs  mod.rs
stringmanip/: Cargo.toml
stringmanip/src/: main.rs
thread1/: Cargo.toml
thread1/src/: main.rs
wc-rs/: Cargo.toml
wc-rs/data/: AliceInWonderland.txt
wc-rs/src/: main.rs
