[package]
name = "thread1"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"

[package.metadata.scripts]
run = "cargo run"
runq = "clear && cargo run -q -- foo.txt"
rund = "clear && RUST_LOG=debug cargo run -q -- foo.txt"
test = "cargo test"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
